chore: documentation + refactoring